fix: komari-agent 下载失败不崩主服务 + 加重试